# homomorphic-polynomial-system

./: README.md  __init__.py  cryptosystem.py  pyproject.toml  test_enc.py  test_math.py  tests.py  utils.py  vars.py
abramov_system/: keygen.py  utils.py  vars.py
cryptosystem/: __init__.py  keygen.py  utils.py  vars.py
homomorphic_polynomial_system/: enc_num.py  keygen.py  utils.py  vars.py
tests/: test_asymptotic.py  test_basics.py  test_enc.py  test_math.py
