[tool.poetry]
name = "abramov_system"
version = "0.1.2"
description = "A fully homomorphic cryptosystem based on the ring of polynomials with rational coefficients."
authors = ["Timofey Klimov <klimovtimofeyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
