[tool.poetry]
name = "homomorphic_polynomial_system"
version = "0.2.1"
description = "A fully homomorphic cryptosystem based on the ring of polynomials with rational coefficients."
authors = ["Timofey Klimov <klimovtimofeyy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
